Better fix ios overflow

--- a/src/components/Text/index.css
+++ b/src/components/Text/index.css
@@ -1,5 +1,5 @@
 .text {
-  margin-block: 0;
+  margin: 0;
   line-height: var(--lineHeightBody);
   color: var(--colorTextBody);
 }
