--- a/src/pages/Home/ProjectSummary.css
+++ b/src/pages/Home/ProjectSummary.css
@@ -9,7 +9,6 @@
   align-items: center;
   justify-content: center;
   outline: none;
-  overflow-x: hidden;
 }
 
 .project-summary--first {
